Fixed how we work boxes look on small resolutions

--- a/assets/custom/css/custom-layout.scss
+++ b/assets/custom/css/custom-layout.scss
@@ -225,7 +225,7 @@ $orange-colour: #e67e22;
 /* Apprenticeship */
 
 .howworks-boxes-container {
-  padding-top: 2rem;
+  padding-top: 1.5rem;
   margin: 0 auto;
 }
 
@@ -256,6 +256,32 @@ $orange-colour: #e67e22;
 
 .testimonials-carousel-container{
   margin: 0 auto;
+
+  .quote {
+    font-size: 14px;
+  }
+  
+  .curly-quotes:before, .curly-quotes:after {
+    font-family: Georgia, serif;
+    display: inline-block;
+    vertical-align: top;
+    height: 30px;
+    line-height: 48px;
+    font-size: 50px;
+    opacity: .2;
+  }
+  
+  .curly-quotes:before {
+    content: '\201C';
+    margin-right: 4px;
+    margin-left: 0px;
+  }
+  
+  .curly-quotes:after {
+    content: '\201D';
+    margin-left: 4px;
+    margin-right: -8px;
+  }
 }
 
 #testimonials-carousel {
@@ -282,32 +308,6 @@ $orange-colour: #e67e22;
   @media (max-width: 767px) {
     height: 160px;
   }
-}
-
-.quote {
-  font-size: 14px;
-}
-
-.curly-quotes:before, .curly-quotes:after {
-  font-family: Georgia, serif;
-  display: inline-block;
-  vertical-align: top;
-  height: 30px;
-  line-height: 48px;
-  font-size: 50px;
-  opacity: .2;
-}
-
-.curly-quotes:before {
-  content: '\201C';
-  margin-right: 4px;
-  margin-left: 0px;
-}
-
-.curly-quotes:after {
-  content: '\201D';
-  margin-left: 4px;
-  margin-right: -8px;
 }
 
 .testimonial-preview {
